# ml-backend

./: .renovaterc  Dockerfile  pyproject.toml
.github/workflows/: release.yaml
ml_backend/: main.py
ml_backend/application/: detect.py
ml_backend/domain/entities/: rdd_features.py
ml_backend/domain/repositories/: rdd_repository_abc.py
ml_backend/infrastructure/dtos/: detect_box.py
ml_backend/infrastructure/repositories/: yolo_rdd_repository.py
