[tool.poetry]
name = "ml-backend"
version = "0.1.0"
description = ""
authors = [
  "Muhammad Naufal <me@falkia34.dev>",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
onnxruntime = "1.21.1"
flask = "3.1.0"
pybase64 = "1.4.1"
gunicorn = "23.0.0"
opencv-python-headless = "4.11.0.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
