[tool.poetry]
name = "ml-backend"
version = "1.4.0"
description = "INFINITE Galaxy machine learning back-end app"
authors = [
  "Muhammad Naufal <me@falkia34.dev>",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.2.5"
onnxruntime = "1.21.1"
flask = "3.1.0"
pybase64 = "1.4.1"
gunicorn = "23.0.0"
opencv-python-headless = "4.11.0.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
